# blackbox

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  todo.md
config/strategies/: debug_test.yaml  regime_composite.yaml  sinclair_mean_reversion.yaml  tiny_mean_reversion.yaml
docs/dev/: refactor_plan.md
experiments/search_spaces/: mean_reversion.yaml  minimal_mean_reversion.yaml
experiments/strategies/: backtest.yaml  debug_mean_reversion.yaml  mean_rev_gpt.yaml  minimal_mean_reversion.yaml  regime_composite.yaml  sinclair_mean_reversion.yaml
notes/: 2025-05-12.md  2025-05-13.md  2025-05-14.md  2025-05-15.md  2025-05-16.md  backtest_architecture.md  manifesto.md
scripts/: fetch_sp100_universe.py  fetch_top_50_universe.py
src/blackbox/cli_scripts/: fetch_ohlcv.py  main.py  run_walkforward.py  tune.py
src/blackbox/config/: loader.py  schema.py
src/blackbox/core/: backtest.py  execution_loop.py  live.py  runner.py
src/blackbox/feature_generators/: __init__.py  base.py  matrix.py  pipeline.py  resolve.py  utils.py
src/blackbox/models/: factory.py  interfaces.py  registry_dynamic.py  tracker.py
src/blackbox/research/: diagnostics.py  metrics.py
src/blackbox/tuning/: grid_search.py  grid_tuner.py  grid_utils.py  interfaces.py  optuna_tuner.py  tuned_walkforward_runner.py  walkforward.py  walkforward_plot.py  walkforward_runner.py
src/blackbox/utils/: context.py  io.py  logger.py  normalization.py  plotting.py  registry.py  rich_logger.py  signals.py  spy_export.py  trade.py  validation.py
tests/: test_feature_alpha_pipeline.py
universe/: top_2000_by_volume.csv
(+85 files in other folders)
