[project]
name = "blackbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.40.0",
    "duckdb>=1.2.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "polygon-api-client>=1.14.5",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.0",
    "tqdm>=4.67.1",
]


[tool.setuptools]
packages = ["trader"]
package-dir = { "" = "src" }
